# coffee.tmux

./: CONTRIBUTING.md  README.md  coffee.tmux  install.sh  pyproject.toml  requirements.txt  ui.py
.github/workflows/: code-quality.yml  unit-test.yml
cli/: main.py  utils.py
cli/commands/: disable.py  info.py  install.py  list_plugins.py  migrate.py  remove.py  update.py  upgrade.py
core/: __init__.py  lock_file_manager.py  pluginInstaller.py  pluginLoader.py  pluginRemover.py  pluginSourcer.py  plugin_installer.py  plugin_loader.py  plugin_migrator.py  plugin_remover.py  plugin_sourcer.py  plugin_updater.py  plugin_upgrader.py
examples/plugins/: tmux-ip-address.yaml  tmux-resurrect-minimal.yaml  tmux-resurrect.yaml
tests/code/: test_lock_file_manger.py  test_pluginInstaller.py  test_pluginLoader.py  test_pluginRemover.py  test_pluginSourcer.py  test_pluginUpdater.py  test_plugin_installer.py  test_plugin_loader.py  test_plugin_migrator.py  test_plugin_remover.py  test_plugin_sourcer.py  test_plugin_updater.py  test_plugin_upgrader.py
ui/: app.py  state.py
ui/tabs/: home.py  install.py  remove.py  update.py
